--- a/rag_workshop.ipynb
+++ b/rag_workshop.ipynb
@@ -150,7 +150,7 @@
    "source": [
     "load_dotenv(override=True)\n",
     "\n",
-    "OLLAMA_ADDRESS = os.getenv(\"OLLAMA_ADDRESS\")\n",
+    "OLLAMA_ADDRESS = os.getenv(\"OLLAMA_ADDRESS\")  # replace with your OLLAMA address\n",
     "LLM_NAME = \"qwen2.5:0.5b\""
    ]
   },
@@ -808,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
