update instruction for anthropic key

--- a/time_series_tool_calling.ipynb
+++ b/time_series_tool_calling.ipynb
@@ -137,7 +137,9 @@
    "source": [
     "# Imports\n",
     "\n",
-    "below are the imports needed for this notebook. "
+    "below are the imports needed for this notebook. \n",
+    "\n",
+    ">Note: You will be asked to provide an API key for anthropic. To get the api key follow [this link](https://kpaste.infomaniak.com/abnZfEJqcr58JDcbspdZ6Y1xCSzHQcZ4#6RtAB95NgXimATi8SmW2nvNLMWfe19eQ264dMKHPyxej) and use the password written on the whiteboard. Don't hesitate to ask for assistance."
    ]
   },
   {
